Fixing bug #147742: You can now save objects named "star" to the observing list.  I have not yet implemented SAO numbers, or the ability to add names to objects (it would be better if these were filed separately as wishes).

Thanks for the report.

BUG: 147742
CCMAIL: kstars-devel@kde.org


svn path=/trunk/KDE/kdeedu/kstars/; revision=762901