kstars/tools/observinglist.cpp
@@ -45,6 +45,7 @@
 #include "skymap.h"
 #include "detaildialog.h"
 #include "tools/altvstime.h"
+#include "Options.h"
 
 #include "indimenu.h"
 #include "indielement.h"
@@ -568,7 +569,20 @@ void ObservingList::slotOpenList() {
 
         while ( ! istream.atEnd() ) {
             line = istream.readLine();
-            SkyObject *o = ks->data()->objectNamed( line );
+
+            //If the object is named "star", add it by coordinates
+            SkyObject *o;
+            if ( line.startsWith( "star" ) ) {
+                QStringList fields = line.split( " ", QString::SkipEmptyParts );
+								dms ra = dms::fromString( fields[1], false ); //false = hours
+								dms dc = dms::fromString( fields[2], true );  //true  = degrees
+								SkyPoint p( ra, dc );
+                double maxrad = 1000.0/Options::zoomFactor();
+								o = ks->data()->skyComposite()->starNearest( &p, maxrad );
+						} else {
+                o = ks->data()->objectNamed( line );
+            }
+
             if ( o ) slotAddObject( o );
         }
 
@@ -640,7 +654,11 @@ void ObservingList::slotSaveList() {
     QTextStream ostream(&f);
     ostream << ListName << endl;
     foreach ( SkyObject* o, obsList() ) {
-        ostream << o->name() << endl;
+        if ( o->name() == "star" ) {
+            ostream << o->name() << "  " << o->ra()->Hours() << "  " << o->dec()->Degrees() << endl;
+        } else {
+            ostream << o->name() << endl;
+        }
     }
 
     f.close();
